--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,13 +35,13 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white"> Astro 5.0</span> + Tailwind CSS
+      Q <span class="hidden xl:inline">.</span>
+      <span class="text-accent dark:text-white"> .</span> Staking
     </Fragment>
 
     <Fragment slot="subtitle">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/8e0c8330-07e2-471d-a663-1ee9884b3e31/97NueZdQzw.lottie" speed="1" style="width: 100%; height: 500px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/0e57e20d-686e-48f3-a68b-5bb4220a86da/grB4Z1VdQD.lottie" speed="1" style="width: 100%; height: 500px" mode="forward" loop autoplay></dotlottie-wc>
       <span class="hidden sm:inline">
         <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 5.0
         + Tailwind CSS.</span
