--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,13 +35,13 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      Q <span class="hidden xl:inline">.</span>
+      QQ <span class="hidden xl:inline">.</span>
       <span class="text-accent dark:text-white"> .</span> Staking
     </Fragment>
 
     <Fragment slot="subtitle">
       <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.7.1/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/c4ef4ca7-1085-4915-9ea4-d9a87b41f41c/tUuo1e2zv3.lottie" speed="0.5" style="width: 100%; height: 550px" mode="forward" loop autoplay></dotlottie-wc>
+<dotlottie-wc src="https://lottie.host/df1cd776-81eb-487b-b8a6-74a947a1d2df/GKec0PKyAB.lottie" speed="1" style="width: 100%; height: 550px" mode="forward" loop autoplay></dotlottie-wc>
       <span class="hidden sm:inline">
         <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 5.0
         + Tailwind CSS.</span
